force-app/main/default/objects/Account_Summary_Setting__mdt/Account_Summary_Setting__mdt.object-meta.xml
<CustomObject>
    <description>RO-2473</description>
    <label>Account Summary Setting</label>
    <pluralLabel>Account Summary Settings</pluralLabel>
</CustomObject>