force-app/main/default/objects/Account_Summary_Setting__mdt/fields/Future_Months_Limit__c.field-meta.xml
<CustomField>
    <fullName>Future_Months_Limit__c</fullName>
    <label>Future Months Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>