force-app/main/default/objects/Account_Summary_Setting__mdt/fields/Min_Duration_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Min_Duration_in_Seconds__c</fullName>
    <label>Min Duration in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>